--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "prettier": {
     "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
+    "semi": false,
+    "singleQuote": false,
+    "trailingComma": "all"
   },
   "name": "ultralight-spinner",
   "author": "Assar C",
