--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "trailingComma": "all"
   },
   "name": "ultralight-spinner",
-  "author": "Assar C",
+  "author": "Assar Classon (http://assar.io)",
   "module": "dist/ultralight-spinner.esm.js",
   "size-limit": [
     {
@@ -67,5 +67,18 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3"
+  },
+  "keywords": [
+    "react",
+    "spinner",
+    "loading",
+    "typescript",
+    "react-components"
+  ],
+  "description": "Tiny and customizable loading spinner component for React",
+  "homepage": "https://github.com/assarbertil/ultralight-spinner#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/assarbertil/ultralight-spinner"
   }
 }
